--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 
 Code related to the paper:
 "A Quantum Analysis of Nested Search Problems with Applications in Cryptanalysis".
+
+Available at:
+https://eprint.iacr.org/2022/761
+
+
